--- a/FinanceApp/Pages/Users/EditUser.razor
+++ b/FinanceApp/Pages/Users/EditUser.razor
@@ -6,20 +6,19 @@
 @using FinanceApp.Services;
 @using FinanceApp.ViewModel;
 
-<PageTitle>@Id</PageTitle>
+<PageTitle>Editar Usuário - @userViewModel.Name</PageTitle>
 
 <br />
-<div class="card">
-    <div class="card-header">
-        <div class="row">
-            <div class="form-inline col-md-4" style="vertical-align: central">
-                <div><span class="fas fa-list fa-2x" /></div>&nbsp;
-                <div><h4>Editar Usuário</h4></div>
-            </div>
-        </div>
+<div class="card text-secondary border-primary mb-3">
+  <div class="card-header">
+    <div class="row">
+      <div class="col-md-9">
+        <h3>Editar Usuário - @userViewModel.Name</h3>
+      </div>
     </div>
-    <div class="card-body">
-        <div class="mb-3">
+  </div>
+  <div class="card-body">
+    <div class="mb-3">
             <label for="FirstName">Id</label>
             <input form="FirstName" class="form-control" disabled="disabled" @bind="@userViewModel.Id" />
         </div>
@@ -37,7 +36,7 @@
                 <input type="button" class="btn btn-danger" @onclick="@Cancel" value="Cancelar" />
             </div>
         </div>
-    </div>
+  </div>
 </div>
 
 @code {
