--- a/FinanceApp/Pages/Users/Users.razor
+++ b/FinanceApp/Pages/Users/Users.razor
@@ -1,5 +1,6 @@
 ﻿@page "/users"
 @inject IUserService _userService;
+@inject NavigationManager NavigationManager
 @using System.Text.Json;
 @using System.Reflection;
 @using FinanceApp.Services;
@@ -8,12 +9,16 @@
 <PageTitle>Usuários</PageTitle>
 
 <br />
-<div class="card">
+<div class="card text-secondary border-primary mb-3">
     <div class="card-header">
         <div class="row">
-            <div class="form-inline col-md-4" style="vertical-align: central">
-                <div><span class="fas fa-list fa-2x" /></div>&nbsp;
-                <div><h4>Usuários</h4></div>
+            <div class="col-md-9">
+                <h3>Lista de Usuários</h3>
+            </div>
+            <div class="col-md-3" style="text-align:right">
+                <div class="float-right">
+                    <input type="button" class="btn btn-primary" @onclick="@AddUser" value="Adicionar Usuário" />
+                </div>
             </div>
         </div>
     </div>
@@ -64,5 +69,10 @@
     protected override async Task OnInitializedAsync()
     {
         users = await _userService.FindAllAsync();
+    }
+
+    protected void AddUser()
+    {
+        NavigationManager.NavigateTo("/adduser");
     }
 }
