--- a/FinanceApp/Shared/NavMenu.razor
+++ b/FinanceApp/Shared/NavMenu.razor
@@ -15,12 +15,12 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="expenses">
                 <span class="oi oi-plus" aria-hidden="true"></span> Despesas
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="categories">
                 <span class="oi oi-plus" aria-hidden="true"></span> Categorias
             </NavLink>
         </div>
