--- a/FinanceApp/Shared/NavMenu.razor
+++ b/FinanceApp/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">FinanceApp</a>
+        <a class="navbar-brand" href="">Controle de Despesas</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -16,21 +16,22 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="expenses">
-                <span class="oi oi-plus" aria-hidden="true"></span> Despesas
+                <span class="oi oi-euro" aria-hidden="true"></span> Despesas
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="categories">
-                <span class="oi oi-plus" aria-hidden="true"></span> Categorias
+                <span class="oi oi-paperclip" aria-hidden="true"></span> Categorias
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="users">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Usuários
+                <span class="oi oi-people" aria-hidden="true"></span> Usuários
             </NavLink>
         </div>
     </nav>
 </div>
+
 
 @code {
     private bool collapseNavMenu = true;
