feat: add expense detail

--- a/FinanceApp/Pages/Categories/Categories.razor
+++ b/FinanceApp/Pages/Categories/Categories.razor
@@ -49,7 +49,7 @@
                             @item.Name
                         </td>
                         <td>
-                            @item.CreatedAt.ToShortDateString()
+                            @item.CreatedAt.ToString("dd/MM/yyyy")
                         </td>
                         <td class="text-right">
                             <a href="/detailcategory/@item.Id"><spam class="oi oi-magnifying-glass"></spam></a>
