--- a/FinanceApp/Pages/Users/Users.razor
+++ b/FinanceApp/Pages/Users/Users.razor
@@ -49,7 +49,7 @@
                             @item.Name
                         </td>
                         <td>
-                            @item.CreatedAt.ToShortDateString()
+                            @item.CreatedAt.ToString("dd/MM/yyyy")
                         </td>
                         <td class="text-right">
                             <a href="/detailuser/@item.Id"><spam class="oi oi-magnifying-glass"></spam></a>
