--- a/FinanceApp/Pages/Expenses/Expenses.razor
+++ b/FinanceApp/Pages/Expenses/Expenses.razor
@@ -41,6 +41,9 @@
                         Usuário
                     </th>
                     <th>
+                        Valor
+                    </th>
+                    <th>
                         Data de Criação
                     </th>
                     <th></th>
@@ -61,6 +64,9 @@
                         </td>
                         <td>
                             @item.UserName
+                        </td>
+                        <td>
+                            @item.Value
                         </td>
                         <td>
                             @item.CreatedAt.ToString("dd/MM/yyyy")
